cert-grid mobile view fix

--- a/index.html
+++ b/index.html
@@ -194,6 +194,9 @@
       .hero h1 {
         font-size: 2.2rem;
       }
+      .cert-grid {
+        grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+      }
     }
   </style>
 </head>
