--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     /* CARD */
     .card {
-      background: var(--card);
+      background: rgba(255, 255, 255, 0.5);
       padding: 24px;
       border-radius: 16px;
       margin-bottom: 20px;
@@ -111,7 +111,7 @@
     }
 
     .skill {
-      background: var(--card);
+      background: rgba(255, 255, 255, 0.5);
       padding: 16px;
       border-radius: 12px;
       font-size: 0.95rem;
