it bootcamp header update

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
   <section class="reveal">
     <h2>IT Bootcamp</h2>
     <div class="card">
-      <h3>Nanays in IT Program</h3>
+      <h3>NIT Program</h3>
       <p><em>Accenture, PBSP & YMCA</em></p>
       <p>
         An intensive, industry-aligned IT bootcamp focused on building practical, entry-level competencies
