--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     </div>
   </section>
 
-  <!-- IT BOOTCAMP -->
+  <!-- BOOTCAMP -->
   <section class="reveal">
     <h2>IT Bootcamp</h2>
     <div class="card">
@@ -261,7 +261,7 @@
         <li><strong>Professional Skills:</strong> Project management, UX fundamentals, digital business concepts</li>
       </ul>
       <p>
-        Related certificates are available in the <a href="#training-certificates" class="link-underline">Training & Certificates</a> section below.
+        Related certificates are available in the <a href="#certs" class="link-underline">Training & Certificates</a> section below.
       </p>
     </div>
   </section>
@@ -348,7 +348,7 @@
   </section>
 
   <!-- CERTIFICATES -->
-  <section class="reveal" id="training-certificates">
+  <section class="reveal" id="certs">
     <h2>Training & Certificates</h2>
     <div class="cert-grid">
       <img src="certs/cert1.jpg" alt="Certificate 1">
