--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
     <a href="#bootcamp" title="IT Bootcamp"><i class="fas fa-graduation-cap"></i></a>
     <a href="#project" title="Featured Project"><i class="fas fa-laptop-code"></i></a>
     <a href="#va" title="Virtual Assistant"><i class="fas fa-headset"></i></a>
-    <a href="#bpo" title="BPO Experience"><i class="fas fa-building"></i></a>
-    <a href="#certs" title="Certificates"><i class="fas fa-certificate"></i></a>
+    <a href="#bpo" title="BPO & Corporate Experience"><i class="fas fa-building"></i></a>
+    <a href="#certs" title="Training & Certificates"><i class="fas fa-certificate"></i></a>
     <a href="#contact" title="Contact"><i class="fas fa-envelope"></i></a>
   </nav>
 
