--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
   <!-- FLOATING NAV -->
   <nav class="floating-nav">
-    <a href="#hero" title="Home"><i class="fas fa-home"></i></a>
+    <a href="#home" title="Home"><i class="fas fa-home"></i></a>
     <a href="#skills" title="Technical Skills"><i class="fas fa-code"></i></a>
     <a href="#bootcamp" title="IT Bootcamp"><i class="fas fa-graduation-cap"></i></a>
     <a href="#project" title="Featured Project"><i class="fas fa-laptop-code"></i></a>
@@ -269,7 +269,7 @@
   </nav>
 
   <!-- HERO -->
-  <section class="hero reveal" id="hero">
+  <section class="hero reveal" id="home">
     <div class="hero-content">
       <h1>Al Jun Mado</h1>
       <span><em>Associate Software Engineer | Virtual Assistant</em></span>
