section padding for mobile view

--- a/index.html
+++ b/index.html
@@ -239,6 +239,9 @@
       .hero h1 {
         font-size: 2.2rem;
       }
+      section {
+        padding-right: 60px;
+      }
       .cert-grid {
         grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
       }
