--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       .hero h1 {
         font-size: 2.2rem;
       }
-      section {
+      .hero {
         padding-right: 60px;
       }
       .cert-grid {
