hero paragraph remove justify

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     <div class="hero-content">
       <h1>Al Jun Mado</h1>
       <span><em>Associate Software Engineer | Virtual Assistant</em></span>
-      <p style="margin-top:20px; text-align: justify;">
+      <p style="margin-top:20px;">
         Associate Software Engineer with a strong background in remote operations, CRM systems, and administrative support. Experienced in data handling, process improvement, and cross-functional collaboration, supported by formal training in SDLC, Python, SQL, Power BI, and applied Generative AI tools. Built and deployed an accessible web platform using HTML, CSS, and JavaScript. Known for adaptability, problem-solving, and translating real-world business requirements into practical technical solutions.
       </p>
     </div>
