--- a/index.html
+++ b/index.html
@@ -145,6 +145,70 @@
       margin-top: 12px;
     }
 
+    /* CAROUSEL */
+    .carousel {
+      margin-top: 20px;
+      position: relative;
+      overflow: hidden;
+      border-radius: 12px;
+    }
+
+    .carousel-track {
+      display: flex;
+      transition: transform 0.5s ease-in-out;
+    }
+
+    .carousel-track img {
+      min-width: 100%;
+      margin-top: 0;
+    }
+
+    .carousel-btn {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background: var(--main);
+      color: var(--card);
+      border: none;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: all 0.3s;
+      z-index: 10;
+      opacity: 0.3;
+    }
+
+    .carousel-btn:hover {
+      opacity: 1;
+    }
+
+    .carousel-btn.prev { left: 10px; }
+    .carousel-btn.next { right: 10px; }
+
+    .carousel-dots {
+      display: flex;
+      justify-content: center;
+      margin-top: 12px;
+      gap: 8px;
+    }
+
+    .dot {
+      width: 10px;
+      height: 10px;
+      background: #ccc;
+      border-radius: 50%;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .dot.active {
+      background: var(--main);
+    }
+
     /* CERTIFICATES */
     .cert-grid {
       display: grid;
@@ -348,10 +412,17 @@
           <i class="fab fa-github"></i> View on GitHub
         </a>
       </div>
-      <hr><img src="projects/pwd-care-hub1.png" alt="Project Screenshot (placeholder)">
-      <hr><img src="projects/pwd-care-hub2.png" alt="Project Screenshot (placeholder)">
-      <hr><img src="projects/pwd-care-hub3.png" alt="Project Screenshot (placeholder)">
-      <hr><img src="projects/pwd-care-hub4.png" alt="Project Screenshot (placeholder)">
+      <div class="carousel">
+        <div class="carousel-track">
+          <img src="projects/pwd-care-hub1.png" alt="Project Screenshot">
+          <img src="projects/pwd-care-hub2.png" alt="Project Screenshot">
+          <img src="projects/pwd-care-hub3.png" alt="Project Screenshot">
+          <img src="projects/pwd-care-hub4.png" alt="Project Screenshot">
+        </div>
+        <button class="carousel-btn prev"><i class="fas fa-chevron-left"></i></button>
+        <button class="carousel-btn next"><i class="fas fa-chevron-right"></i></button>
+      </div>
+      <div class="carousel-dots"></div>
     </div>
   </section>
 
@@ -481,6 +552,54 @@
     modal.addEventListener("click", () => {
       modal.style.display = "none";
     });
+
+    // Project Carousel
+    const track = document.querySelector('.carousel-track');
+    const dotsContainer = document.querySelector('.carousel-dots');
+    const prevBtn = document.querySelector('.carousel-btn.prev');
+    const nextBtn = document.querySelector('.carousel-btn.next');
+
+    if (track) {
+      const slides = Array.from(track.children);
+      let slideIndex = 0;
+      let autoSlideInterval;
+
+      // Create dots
+      slides.forEach((_, index) => {
+        const dot = document.createElement('div');
+        dot.classList.add('dot');
+        if (index === 0) dot.classList.add('active');
+        dot.addEventListener('click', () => goToSlide(index));
+        dotsContainer.appendChild(dot);
+      });
+
+      const dots = document.querySelectorAll('.dot');
+
+      function updateCarousel() {
+        track.style.transform = `translateX(-${slideIndex * 100}%)`;
+        dots.forEach(d => d.classList.remove('active'));
+        if (dots[slideIndex]) dots[slideIndex].classList.add('active');
+      }
+
+      function goToSlide(index) {
+        slideIndex = index;
+        if (slideIndex < 0) slideIndex = slides.length - 1;
+        if (slideIndex >= slides.length) slideIndex = 0;
+        updateCarousel();
+        resetTimer();
+      }
+
+      function resetTimer() {
+        clearInterval(autoSlideInterval);
+        autoSlideInterval = setInterval(() => goToSlide(slideIndex + 1), 3000);
+      }
+
+      prevBtn.addEventListener('click', () => goToSlide(slideIndex - 1));
+      nextBtn.addEventListener('click', () => goToSlide(slideIndex + 1));
+
+      // Start auto slide
+      autoSlideInterval = setInterval(() => goToSlide(slideIndex + 1), 3000);
+    }
   </script>
 
 </body>
