--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
     <a href="#home" title="Home"><i class="fas fa-home"></i></a>
     <a href="#skills" title="Technical Skills"><i class="fas fa-code"></i></a>
     <a href="#bootcamp" title="IT Bootcamp"><i class="fas fa-graduation-cap"></i></a>
-    <a href="#project" title="Featured Project"><i class="fas fa-laptop-code"></i></a>
+    <a href="#projects" title="Featured Project"><i class="fas fa-laptop-code"></i></a>
     <a href="#va" title="Virtual Assistant"><i class="fas fa-headset"></i></a>
     <a href="#bpo" title="BPO & Corporate Experience"><i class="fas fa-building"></i></a>
     <a href="#certs" title="Training & Certificates"><i class="fas fa-certificate"></i></a>
@@ -393,7 +393,7 @@
   </section>
 
   <!-- PROJECT -->
-  <section class="reveal" id="project">
+  <section class="reveal" id="projects">
     <h2>Featured Project</h2>
     <div class="card project">
       <h3>Mandaluyong PWD Care Hub PH</h3>
