--- a/index.html
+++ b/index.html
@@ -501,13 +501,13 @@
       <p>
         These roles have trained me to adapt quickly to new tools and processes—skills I now apply to software engineering and virtual assistance.
       </p>
-      <div class="company-logos">
-        <img src="bpo/logo1.png" alt="Company 1">
-        <img src="bpo/logo2.png" alt="Company 2">
-        <img src="bpo/logo3.png" alt="Company 3">
-        <img src="bpo/logo4.png" alt="Company 4">
-        <img src="bpo/logo5.png" alt="Company 5">
-      </div>
+    </div>
+    <div class="company-logos">
+      <img src="bpo/logo1.png" alt="Logo 1">
+      <img src="bpo/logo2.png" alt="Logo 2">
+      <img src="bpo/logo3.png" alt="Logo 3">
+      <img src="bpo/logo4.png" alt="Logo 4">
+      <img src="bpo/logo5.png" alt="Logo 5">
     </div>
   </section>
 
