--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     /* LOGOS */
     .company-logos {
       display: flex;
-      justify-content: space-evenly;
+      justify-content: center;
       align-items: center;
       margin-top: 24px;
       gap: 15px;
