bpo logos update

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     /* LOGOS */
     .company-logos {
       display: flex;
-      justify-content: center;
+      justify-content: space-evenly;
       align-items: center;
       margin-top: 24px;
       gap: 15px;
@@ -316,7 +316,6 @@
       object-fit: contain;
       opacity: 0.8;
       transition: transform 0.3s;
-      border-radius: 12px;
     }
 
     .company-logos img:hover {
@@ -501,13 +500,13 @@
       <p>
         These roles have trained me to adapt quickly to new tools and processes—skills I now apply to software engineering and virtual assistance.
       </p>
-    </div>
-    <div class="company-logos">
-      <img src="bpo/logo1.png" alt="Logo 1">
-      <img src="bpo/logo2.png" alt="Logo 2">
-      <img src="bpo/logo3.png" alt="Logo 3">
-      <img src="bpo/logo4.png" alt="Logo 4">
-      <img src="bpo/logo5.png" alt="Logo 5">
+      <div class="company-logos">
+        <img src="bpo/logo1.png" alt="Logo 1">
+        <img src="bpo/logo2.png" alt="Logo 2">
+        <img src="bpo/logo3.png" alt="Logo 3">
+        <img src="bpo/logo4.png" alt="Logo 4">
+        <img src="bpo/logo5.png" alt="Logo 5">
+      </div>
     </div>
   </section>
 
