carousel-btn color update

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       top: 50%;
       transform: translateY(-50%);
       background: var(--main);
-      color: var(--bg);
+      color: var(--card);
       border: none;
       width: 40px;
       height: 40px;
@@ -179,11 +179,11 @@
       justify-content: center;
       transition: all 0.3s;
       z-index: 10;
-      opacity: 0.8;
+      opacity: 0.3;
     }
 
     .carousel-btn:hover {
-      background: var(--accent);
+      background: var(--main);
       opacity: 1;
     }
 
