cert-grid update

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     /* CERTIFICATES */
     .cert-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      grid-template-columns: repeat(4, minmax(auto, 1fr));
       gap: 16px;
     }
 
@@ -331,7 +331,7 @@
         padding-right: 60px;
       }
       .cert-grid {
-        grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+        grid-template-columns: repeat(2, minmax(auto, 1fr));
       }
       .floating-nav {
         right: 10px;
