bpo section update

--- a/index.html
+++ b/index.html
@@ -493,7 +493,8 @@
       <ul style="padding-left: 20px; margin-top: 12px; margin-bottom: 12px;">
         <li><strong>Content Moderation:</strong> Ensured online community safety by strictly adhering to platform policies and resolving escalations.</li>
         <li><strong>Activation Specialist:</strong> Managed utility service activations and coordinated with providers to ensure seamless client setups.</li>
-        <li><strong>Chat & Back-Office Support:</strong> Delivered high-quality support with a 95% resolution rate and maintained accuracy in airline ticketing records.</li>
+        <li><strong>Chat Support:</strong> Provided real-time support with a 95% first-contact resolution rate, explaining billing and services.</li>
+        <li><strong>Back-Office Support:</strong> Maintained accurate airline ticketing records and processed flight changes via email.</li>
         <li><strong>Customer Service:</strong> Managed product inquiries, returns, and billing concerns via phone, delivering empathetic and solution-oriented service.</li>
       </ul>
       <p>
