open new tab for contact links

--- a/index.html
+++ b/index.html
@@ -549,9 +549,9 @@
   <!-- CONTACT -->
   <section class="reveal contact" id="contact">
     <h2>Contact</h2>
-    <p><i class="fas fa-envelope"></i> <a href="mailto:aljun.mado@gmail.com" class="link-underline">aljun.mado@gmail.com</a></p>
-    <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/al-jun-mado-9606122b3" class="link-underline">al-jun-mado-9606122b3</a></p>
-    <p><i class="fas fa-map-marker-alt"></i> <a href="https://maps.app.goo.gl/WoyXrJ7qjzuc7N9KA" class="link-underline">Caloocan City, Metro Manila, Philippines</a></p>
+    <p><i class="fas fa-envelope"></i> <a href="mailto:aljun.mado@gmail.com" target="_blank" class="link-underline">aljun.mado@gmail.com</a></p>
+    <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/al-jun-mado-9606122b3" target="_blank" class="link-underline">al-jun-mado-9606122b3</a></p>
+    <p><i class="fas fa-map-marker-alt"></i> <a href="https://maps.app.goo.gl/WoyXrJ7qjzuc7N9KA" target="_blank" class="link-underline">Caloocan City, Metro Manila, Philippines</a></p>
   </section>
 
   <!-- MODAL -->
