div card added to va carousel and img placeholder

--- a/index.html
+++ b/index.html
@@ -513,18 +513,19 @@
       <div class="skill">Facebook Ads Manager</div>
     </div>
   <br>
+    <div class="card">
     <div class="carousel">
       <div class="carousel-track">
         <div class="carousel-slide">
-          <img src="va/va1.png" alt="VA Screenshot">
+          <img src="va/va1.jpg" alt="VA Screenshot">
           <div class="carousel-caption">Title</div>
         </div>
         <div class="carousel-slide">
-          <img src="va/va2.png" alt="VA Screenshot">
+          <img src="va/va2.jpg" alt="VA Screenshot">
           <div class="carousel-caption">Title</div>
         </div>
         <div class="carousel-slide">
-          <img src="va/va3.png" alt="VA Screenshot">
+          <img src="va/va3.jpg" alt="VA Screenshot">
           <div class="carousel-caption">Title</div>
         </div>
       </div>
@@ -532,6 +533,7 @@
       <button class="carousel-btn next"><i class="fas fa-chevron-right"></i></button>
     </div>
     <div class="carousel-dots"></div>
+    </div>
   </section>
 
   <!-- BPO -->
