added va carousel images

--- a/index.html
+++ b/index.html
@@ -517,16 +517,40 @@
     <div class="carousel">
       <div class="carousel-track">
         <div class="carousel-slide">
-          <img src="va/va1.jpg" alt="VA Screenshot">
-          <div class="carousel-caption">Title</div>
+          <img src="va/va1.png" alt="VA Screenshot">
+          <div class="carousel-caption">Zoho CRM</div>
         </div>
         <div class="carousel-slide">
-          <img src="va/va2.jpg" alt="VA Screenshot">
-          <div class="carousel-caption">Title</div>
+          <img src="va/va2.png" alt="VA Screenshot">
+          <div class="carousel-caption">LinkedIn Sales Navigator</div>
         </div>
         <div class="carousel-slide">
-          <img src="va/va3.jpg" alt="VA Screenshot">
-          <div class="carousel-caption">Title</div>
+          <img src="va/va3.png" alt="VA Screenshot">
+          <div class="carousel-caption">Google Docs</div>
+        </div>
+        <div class="carousel-slide">
+          <img src="va/va4.png" alt="VA Screenshot">
+          <div class="carousel-caption">Google Sheets</div>
+        </div>
+        <div class="carousel-slide">
+          <img src="va/va5.png" alt="VA Screenshot">
+          <div class="carousel-caption">Gmail</div>
+        </div>
+        <div class="carousel-slide">
+          <img src="va/va6.png" alt="VA Screenshot">
+          <div class="carousel-caption">Google Calendar</div>
+        </div>
+        <div class="carousel-slide">
+          <img src="va/va7.png" alt="VA Screenshot">
+          <div class="carousel-caption">Canva</div>
+        </div>
+        <div class="carousel-slide">
+          <img src="va/va8.png" alt="VA Screenshot">
+          <div class="carousel-caption">Mailchimp</div>
+        </div>
+        <div class="carousel-slide">
+          <img src="va/va9.png" alt="VA Screenshot">
+          <div class="carousel-caption">Facebook Ads Manager</div>
         </div>
       </div>
       <button class="carousel-btn prev"><i class="fas fa-chevron-left"></i></button>
