project and cert tag renamed

--- a/index.html
+++ b/index.html
@@ -384,10 +384,10 @@
     <a href="#home" title="Home"><i class="fas fa-home"></i></a>
     <a href="#skills" title="Technical Skills"><i class="fas fa-code"></i></a>
     <a href="#bootcamp" title="IT Bootcamp"><i class="fas fa-graduation-cap"></i></a>
-    <a href="#projects" title="Featured Project"><i class="fas fa-laptop-code"></i></a>
+    <a href="#project" title="Featured Project"><i class="fas fa-laptop-code"></i></a>
     <a href="#va" title="Virtual Assistant"><i class="fas fa-headset"></i></a>
     <a href="#bpo" title="BPO & Corporate Experience"><i class="fas fa-building"></i></a>
-    <a href="#certs" title="Training & Certificates"><i class="fas fa-certificate"></i></a>
+    <a href="#cert" title="Training & Certificates"><i class="fas fa-certificate"></i></a>
     <a href="#contact" title="Contact"><i class="fas fa-envelope"></i></a>
   </nav>
 
@@ -441,13 +441,13 @@
         <li><strong>Professional Skills:</strong> Project management, UX fundamentals, digital business concepts</li>
       </ul>
       <p>
-        Related certificates are available in the <a href="#certs" class="link-underline">Training & Certificates</a> section below.
+        Related certificates are available in the <a href="#cert" class="link-underline">Training & Certificates</a> section below.
       </p>
     </div>
   </section>
 
   <!-- PROJECT -->
-  <section class="reveal" id="projects">
+  <section class="reveal" id="project">
     <h2>Featured Project</h2>
     <div class="card project">
       <h3>Mandaluyong PWD Care Hub PH</h3>
@@ -470,10 +470,10 @@
       </div>
       <div class="carousel">
         <div class="carousel-track">
-          <img src="projects/pwd-care-hub1.png" alt="Project Screenshot">
-          <img src="projects/pwd-care-hub2.png" alt="Project Screenshot">
-          <img src="projects/pwd-care-hub3.png" alt="Project Screenshot">
-          <img src="projects/pwd-care-hub4.png" alt="Project Screenshot">
+          <img src="project/pwd-care-hub1.png" alt="Project Screenshot">
+          <img src="project/pwd-care-hub2.png" alt="Project Screenshot">
+          <img src="project/pwd-care-hub3.png" alt="Project Screenshot">
+          <img src="project/pwd-care-hub4.png" alt="Project Screenshot">
         </div>
         <button class="carousel-btn prev"><i class="fas fa-chevron-left"></i></button>
         <button class="carousel-btn next"><i class="fas fa-chevron-right"></i></button>
@@ -589,29 +589,29 @@
   </section>
 
   <!-- CERTIFICATES -->
-  <section class="reveal" id="certs">
+  <section class="reveal" id="cert">
     <h2>Training & Certificates</h2>
     <div class="cert-grid">
-      <img src="certs/cert1.jpg" alt="Certificate">
-      <img src="certs/cert2.jpg" alt="Certificate">
-      <img src="certs/cert3.jpg" alt="Certificate">
-      <img src="certs/cert4.jpg" alt="Certificate">
-      <img src="certs/cert5.jpg" alt="Certificate">
-      <img src="certs/cert6.jpg" alt="Certificate"> 
-      <img src="certs/cert7.jpg" alt="Certificate">
-      <img src="certs/cert8.jpg" alt="Certificate">
-      <img src="certs/cert9.jpg" alt="Certificate">
-      <img src="certs/cert10.jpg" alt="Certificate">
-      <img src="certs/cert11.jpg" alt="Certificate">
-      <img src="certs/cert12.jpg" alt="Certificate">
-      <img src="certs/cert13.jpg" alt="Certificate">
-      <img src="certs/cert14.jpg" alt="Certificate">
-      <img src="certs/cert15.jpg" alt="Certificate">
-      <img src="certs/cert16.jpg" alt="Certificate">
-      <img src="certs/cert17.jpg" alt="Certificate">
-      <img src="certs/cert18.jpg" alt="Certificate">
-      <img src="certs/cert19.jpg" alt="Certificate">
-      <img src="certs/cert20.jpg" alt="Certificate">
+      <img src="cert/cert1.jpg" alt="Certificate">
+      <img src="cert/cert2.jpg" alt="Certificate">
+      <img src="cert/cert3.jpg" alt="Certificate">
+      <img src="cert/cert4.jpg" alt="Certificate">
+      <img src="cert/cert5.jpg" alt="Certificate">
+      <img src="cert/cert6.jpg" alt="Certificate"> 
+      <img src="cert/cert7.jpg" alt="Certificate">
+      <img src="cert/cert8.jpg" alt="Certificate">
+      <img src="cert/cert9.jpg" alt="Certificate">
+      <img src="cert/cert10.jpg" alt="Certificate">
+      <img src="cert/cert11.jpg" alt="Certificate">
+      <img src="cert/cert12.jpg" alt="Certificate">
+      <img src="cert/cert13.jpg" alt="Certificate">
+      <img src="cert/cert14.jpg" alt="Certificate">
+      <img src="cert/cert15.jpg" alt="Certificate">
+      <img src="cert/cert16.jpg" alt="Certificate">
+      <img src="cert/cert17.jpg" alt="Certificate">
+      <img src="cert/cert18.jpg" alt="Certificate">
+      <img src="cert/cert19.jpg" alt="Certificate">
+      <img src="cert/cert20.jpg" alt="Certificate">
     </div>
   </section>
 
