--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     /* SKILLS */
     .skill-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      grid-template-columns: repeat(4, minmax(auto, 1fr));
       gap: 16px;
     }
 
@@ -361,6 +361,9 @@
       }
       .hero {
         padding-right: 60px;
+      }
+      .skill-grid {
+        grid-template-columns: repeat(2, minmax(auto, 1fr));
       }
       .cert-grid {
         grid-template-columns: repeat(2, minmax(auto, 1fr));
